--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "godotTools.editorPath.godot4": "c:\\Users\\local_admin\\Downloads\\Godot_v4.5-stable_mono_win64\\Godot_v4.5-stable_mono_win64\\Godot_v4.5-stable_mono_win64.exe"
+    "godotTools.editorPath.godot4": "d:\\Разработка\\Godot_v4.5-stable_mono_win64\\Godot_v4.5-stable_mono_win64.exe"
 }
